public/assets/css/events.css
/* body {
    scroll-behavior: auto;
} */

.banner{
    width: 96vw;
    height: 300px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.banner-container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 42px 100px;
    flex-wrap: nowrap;
    height: fit-content;
    /* width: 96vw; */

}

.banner-inner{
    display: flex;
    width: 98vw;
    overflow: hidden;
}

.banner-item{
    display: block;
    flex: 0 0 100%;
}

.header{
    font-family: 'Ubuntu', sans-serif;
    font-size: 30px;
    padding: 21px 100px;
}

.carousel{
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    margin: auto;
    flex-wrap: nowrap;
    height: fit-content;
    width: 88.3vw;
}

.carousel1{
    padding-top: 2rem;
    display: flex;
    justify-content: center;
    margin: auto;
    flex-wrap: nowrap;
    height: fit-content;
    width: 80vw;
    /* border: 1px solid black; */
}

.catalog-container{
    /* border: 1px solid black; */
    /* width: 100vw; */
    display: flex;
    justify-content: flex-start;
    /* align-self: center; */
    /* border: 1px solid black; */
    flex-wrap: wrap;
    /* margin-left: 1.3vw; */

    gap: 10px;
}

#section1{
    width: 98vw;
    padding: 42px 0px 42px 25px;
    /* justify-content: center; */
}

#result-container{
    /* border: 1px solid black; */
    padding: 42px 80px 42px 120px;
}

a.custom-card,
a.custom-card:hover {
  color: inherit;
  text-decoration-line: none;
}

a.custom-card:hover {
    color: #673AB7;
}

.card{
    font-family: 'M PLUS Rounded 1c', sans-serif;
    position: relative;
    /* width: 201px;
    height: 203px; */
    background: #FFFFFF;
    border: 1px solid #CDCDCD;
    box-shadow: 4px 4px 8px #CDCDCD;
    /* margin: 12px; */
    border-radius: 10px;
}

.card-img{
    width: 200px;
    height: 150px;
}

.caption{
    padding: 9px;
    font-size: 17px;
}

.caption:hover{
    text-decoration-color: #673AB7;
}

.search-row{
    display: flex;
    /* width: 96vw;
    margin: 21px;
    padding: 8px; */
    padding: 11px 100px 11px 100px;
    flex-direction: row;
    position: sticky;
    top: 57px;
    z-index: 1;
    background-color: white;
}

.form-group{
    width: 430px;
}

.search{
    width: 20px;
}

.search-button{
    text-decoration: none;
    border: 0px;
    background-color: transparent;
}

.search-button:hover{
    color: #673AB7;
}

.carousel-inner{
    display: flex;
    padding-left: 25px;
    margin-right: 20px;
}

.carousel-item, .carousel-item1{
    display: block;
    /* flex: 0 0 15%; */
    margin-right: 60px;
}

.carousel-item1{
    display: block;
    /* border: 1px solid black; */

}

.carousel-control-prev, .carousel-control-next,
.carousel-control-prev1, .carousel-control-next1{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 8vh;
    height: 8vh;
    background-color: #181823;
    border: 50%;
    top: 50%;
    opacity: 0.5;
    transform: translateY(-50%);
    border-radius: 50%;
}

.carousel-control-prev:hover, .carousel-control-next:hover,
.carousel-control-prev1:hover, .carousel-control-next1:hover{
    opacity: 1;
}

.bubble-box, #bubble-box{
    position: relative;
    height: 35px;
    background: #FFFFFF;
    /* border: 1px solid #CDCDCD; */
    /* box-shadow: 4px 4px 8px #CDCDCD; */
    /* border-radius: 17.5px; */
    margin: 0 10.5px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 2px;
    display: flex;
    align-items: center;
    justify-content: center;

    box-shadow: 4px 4px 8px #CDCDCD;
    border-radius: 20px;
    border: 1px solid #CDCDCD;
    /* border: 1px solid red; */
    /* width: 25px; */

    font-family: 'Poppins';
    font-size: 15px;

}

#search-event{
    border: 0px;
    outline: none;
    width: 375px;
    padding: 0px 10px;

    font-family: 'Poppins';
}

#search-event:focus{
    outline:none;

    font-family: 'Poppins';
}

.next, .prev {
    width: 25px;
    height: 25px;
}

/* EVENT */

.desc-container{
    /* width: 90vw; */
    margin: 40px 100px 40px 100px;
    display: flex;
    flex-direction: row;
    /* font-family: 'M PLUS Rounded 1c', sans-serif; */
    font-family: 'Poppins';
}

.desc{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-left: 21px;
    height: 400px;
}

.desc-img{
    width: 450px;
    height: 337.5px;
    border: 1px solid #CDCDCD;
    border-radius: 20px;
    box-shadow: 4px 4px 8px #CDCDCD;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.desc-headline{
    font-size: 25px;
}

.desc-caption{
    text-align: justify;
    line-height: normal;
}

.slide{
    display: flex;
    width: 102vw;
    height: fit-content;
    scroll-snap-type: x mandatory;
    flex-direction: row;
    flex-wrap: nowrap;
    overflow: hidden;
    overflow-x: scroll;
}

.slide::-webkit-scrollbar {
    display: none;
}

.slide1::-webkit-scrollbar {
    display: none;
}

.slide, .slide1 {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.slide1{
    display: flex;
    width: 100vw;
    /* border: 1px solid black; */
    justify-content: space-between;
    padding: 0px 20px;
    height: fit-content;
    scroll-snap-type: x mandatory;
    flex-direction: row;
    flex-wrap: nowrap;
    overflow: hidden;
    overflow-x: scroll;
}

.slide section{
    flex: none;
    scroll-snap-align: start;
    scroll-margin-left: 50px;
}

.slide1 section{
    flex: none;
    scroll-snap-align: start;
    scroll-margin-left: 25px;
}

.stat-container{
    width: 80vw;
    margin: 20px;
    /* padding: 30px; */
    display: flex;
    flex-direction: column;

}

.stat-headline{
    font-family: 'M PLUS Rounded 1c', sans-serif;
    font-size: 21px;
    font-weight: 600;
    height: 45px;
}

.purple{
    color: #522E93;
}

.stat-subheadline{
    font-family: 'M PLUS Rounded 1c', sans-serif;
    font-size: 18px;
    font-weight: 600;
    height: 30px;
    display: flex;
    text-align: center;
    padding-top: 5px;
}

.rincian-container{
    /* border: 1px solid black; */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-self: center;
    justify-content: space-between;
    width: 65vw;
    margin: 21px 0 30px 0;

}

.rec{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 15vw;
    border: 1px solid #CDCDCD;
    box-shadow: 4px 4px 8px #CDCDCD;
    padding: 15px 0;
    border-radius: 10px;
    transition: transform .2s ease;
}

.rec:hover{
    cursor: pointer;
    transform: scale(1.075);
}

.grafik-time{
    margin-top: 16px;
}

.nav-button,
.nav-button1{
    color: #522E93;
    position: relative;
    width: 6rem;
    height: 2.75rem;
    border-radius: 0%;
    margin: 10px;
    font-size: 18px;
    font-weight: 500;
    outline: none;
    border: 0px;
    background-color: transparent;
    opacity: 1;
    justify-content: center;
}

.nav-button:hover,
.nav-button1:hover{
    color: #522E93;
    transform: translateY(-20px);
}

.nav-cont .active, .nav-cont1 .active{
    border-bottom: 3px solid #522E93;
    color: #522E93;
}

.nav-cont{
    color: #522E93;
    background-color: white;
    position: sticky;
    top: 35px;
    z-index: 1;
    margin: auto;
    height: 4rem;
    width: 97vw;
    margin: 20px 0px 20px 0px;
}

.nav-cont1{
    color: #522E93;
    height: 3rem;
    width: 19vw;
    padding-bottom: 15px;
}

.grafik{
    width: 100px;
}

/* .card1{
    font-family: 'M PLUS Rounded 1c', sans-serif;
    position: relative;
    width: 201px;
    height: 250px;
    background: #FFFFFF;
    border: 1px solid #CDCDCD;
    box-shadow: 4px 4px 8px #CDCDCD;
    margin: 10.5px;
} */

.caption1{
    padding: 8px 10px;
    font-size: 17px;
    height: 100px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.small{
    font-size: 14px;
}

.pic{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: 21px;
}

.donate{
    display: flex;
    background-color: #522E93;
    color: white;
    text-decoration: none;
    width: 455px;
    height: 2.5rem;
    justify-content: center;
    align-items: center;
    margin: 21px;
    font-size: 19px;
    border-radius: 10px;
    box-shadow: 4px 4px 8px #CDCDCD;
}

.donate:hover{
    background-color: #673AB7;
    color: white;
}

.nav-line{
    margin-top: -20px;
    position: sticky;
    top: 98px;
    z-index: 1;
}

.progress-container{
    width: 100%;
    height: 3rem;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.progress{
    width: 100%;
    height: 1.25rem;
    border-radius: 8px;
    margin: 10px;
    border: 1px solid #CDCDCD;
}

.progress-bar{
    background-color: #673AB7;
}

.date{
    text-align: center;
}

.more-products{
    /* border: 1px solid black; */
    display: flex;
    flex-direction: row;
    width: 81vw;
    justify-content: space-around;
    align-items: center;
    margin: 42px 0px 84px 0px;
}

.more{
    padding: 14px;
    color: white;
    font-size: 20px;
    font-weight: 600;
    text-align: center;
    border: 0px;
    background-color: #522E93;
}

.more:hover{
    background-color: #673AB7;
    color: white;
}

.line1{
    border: 1px solid #522E93;
    width: 400px;
    box-shadow: none;
}

#more {
    display: none;
}

.blank{
    width: 40vw;
    height: 300px;
    background-color: #CDCDCD;
}

#section3, #section4{
    margin: 0;
    padding: 0;
    /* height: 99%; */
    display: flex;
    justify-content: center;
}

#section-donate{
    position: absolute;
    z-index: -1;
    top: 520px;
}

.not-found{
    width: 98vw;
    text-align: center;
    color: black;
    font-size: 25px;
    font-family: 'M PLUS Rounded 1c', sans-serif;
    height: 300px;
    align-items: center;
    display: flex;
    margin-bottom: 42px;
}

.purple-but{
    background-color: #522E93;
    color: #FFFFFF;
}

#purple-but:hover{
    background-color: #673AB7;
}

.section5{
    scroll-behavior: auto;
}

[data-scroll] {
    scroll-behavior: auto !important;
}

body{
    scroll-behavior: auto;
}

.gap{
    height: 100px;
}

#myChart, #myChart1{
    border: 1px solid #522E93;
    width: 700px !important;
    height: 400px !important;
}

.chart-result{
    /* width: 900px; */
    padding: 42px 130px 84px 130px;
}

/* product */
.productsDiv{
    width: 100%;
}

.products{
    height: fit-content;
    align-items: start;
    /* padding: 0px 42px; */
    padding: 5px 100px;
    padding-bottom: 30px;
}
/* product */

/* button */
.btn-1{
    background-color: #522E93;
    color: #FFFFFF;
    padding: 0;
    font-family: 'M PLUS 1';
    font-style: normal;
    font-weight: 700;
    font-size: 22px;
    line-height: 43px;
    filter: drop-shadow(4px 4px 0px rgba(0, 0, 0, 0.25));
    border-radius: 0;
}

.btn-1:hover{
    background-color: #522E93;
    color: #FFFFFF;
    padding: 0;
    font-family: 'M PLUS 1';
    font-style: normal;
    font-weight: 700;
    font-size: 22px;
    line-height: 43px;
    filter: drop-shadow(4px 4px 0px rgba(0, 0, 0, 0.25));
    border-radius: 0;
}

.seeMore{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60px;
    width: 200px;
}

.lineBtn{
    height: 2px;
    width: 40%;
    background-color: #522E93;
}

.fullBtn{
    margin-top: 30px;
    margin-bottom: 80px;
    padding: 0px 42px;
    /* display: none; */
}

/* #more {
    display: none;
} */

.display-none{
    opacity: 0;
}
/* button */

